--- a/cam/index.html
+++ b/cam/index.html
@@ -93,10 +93,8 @@
 	</script>
 	<body>
 		<section>
-			<h3>pico.js: face detection in JavaScript</h3>
-			<p>If your platform supports the getUserMedia API call, you can try the <b>pico.js</b> real-time face detector.</p>
-			<p>Simply click the button below and allow the page to access your webcam.</p>
-			<p><b>All the processing is done on the client side, i.e., without sending images to a server.</b></p>
+			<h3>Detectie fata</h3>
+			
 		</section>
 		<hr>
 		<p><center><input type="button" value="Start real-time face detection" onclick="button_callback()"></center></p>
