--- a/cam/index.html
+++ b/cam/index.html
@@ -82,7 +82,7 @@
 					}
 			}
 			/*
-				(4) instantiate camera handling (see https://github.com/cbrandolino/camvas)
+				(4) instantiate camera handling 
 			*/
 			var mycamvas = new camvas(ctx, processfn);
 			/*
